--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/utilisateu.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/utilisateur.css') }}">
 {% endblock %}
     <!-- Sidebar -->
     <div class="sidebar" id="sidebar">
@@ -65,7 +65,7 @@
                 </a>
                 <button class="btn btn-primary">
                     <span class="btn-icon">➕</span>
-                    <a href="{{ path('app_creation_cotisation') }}" style="color: #fff; text-decoration: none;">
+                    <a href="{{ path('app_cotisation_new') }}" style="color: #fff; text-decoration: none;">
                     Créer une cotisation
                     </a>
                 </button>
