--- a/templates/cotisation/index.html.twig
+++ b/templates/cotisation/index.html.twig
@@ -90,7 +90,7 @@
                     <a href="#" class="btn btn-primary">Liste des cotisations Créer par moi</a>
                 </div> <br><br>
 
-                <table class="table table-striped">
+                <table class="table table-striped" border="1">
                     <thead>
                         <tr>
                           <th>ID</th>
@@ -98,6 +98,7 @@
                            <th>Type</th>
                           <th>Montant_objectif</th>
                           <th>Montant_minimum</th>
+                          <th>Montant_par_echance</th>
                           <th>Date_début</th>
                           <th>Date_fin</th>
                           <th>Actions</th>
@@ -110,8 +111,9 @@
                            <td>{{ cotisation.id }}</td>
                            <td>{{ cotisation.titre }}</td>
                             <td>{{ cotisation.typeCotisation }}</td>
-                          <td>{{ cotisation.montantObjectif|number_format(2, ',', ' ') }} FCFA</td>
-                         <td>{{ cotisation.montantMinimum|number_format(2, ',', ' ') }} FCFA</td>
+                          <td>{{ cotisation.montantObjectif|number_format(0, ',', ' ') }} FCFA</td>
+                         <td>{{ cotisation.montantMinimum|number_format(0, ',', ' ') }} FCFA</td>
+                         <td>{{ cotisation.montantParEcheance|number_format(0, ',', ' ') }} FCFA</td>
                             <td>{{ cotisation.dateDebut ? cotisation.dateDebut|date('d/m/Y') : '' }}</td>
                            <td>{{ cotisation.dateFin ? cotisation.dateFin|date('d/m/Y') : 'Indéfinie' }}</td>
                             <td>
